Fix navbar late display and overflow when animations

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ html::-webkit-scrollbar {
   display: none;
 }
 
+#root {
+  overflow: hidden;
+}
+
 h1,h2,h3,h4,h5,h6{
   font-family: sans-serif;
 }
